@startuml klassen-systeem
'=============================================================================
' SWADP — Volledig systeemklassendiagram
'=============================================================================
' Toont hoe het OOPR2-domein wordt aangevuld met:
'   - Infrastructure     : IGpio, PigpioGpio/MockGpio, Servo
'   - Presentation       : MainWindow, Drukbox
'
' Niet-bestaande klassen (GebouwController, DeurFactory, KnopFysiek,
' LedFysiek, SlotException) zijn bewust weggelaten — YAGNI.
'=============================================================================

title SWADP — Volledige systeem-architectuur

skinparam classAttributeIconSize 0
skinparam linetype polyline
hide empty members

'==============================================================================
package "Presentation Layer" #LightBlue {
  class MainWindow {
    -_gpio : unique_ptr<IGpio>
    -_servoVd : unique_ptr<Servo>
    -_servoD1 : unique_ptr<Servo>
    -_servoD2 : unique_ptr<Servo>
    -_drukbox : unique_ptr<Drukbox>
    +MainWindow(parent: QWidget*)
    +paintEvent(QPaintEvent*)
    -onSchuifdeurKnopClicked()
    -onDraaideurD1KnopClicked()
    -onDraaideurD2KnopClicked()
    -onHalsensorKnopClicked()
    -onMaakIdKaartClicked()
    -onVerwijderIdKaartClicked()
    -onZoekOpNaamClicked()
    -onToonAlleKaartenClicked()
  }

  class Drukbox {
    +toonText(string) : void
    +clearMedium() : void
  }
}

'==============================================================================
package "Domain Layer (OOPR2)" #LightYellow {
  class Deur
  class Schuifdeur
  class Draaideur
  interface Sensor <<Interface>>
  interface Slot <<Interface>>
  class SleutelSlot
  class CodeSlot
  class HerkenningsSlot
  class KaartSlot
  class IdKaart
  interface Afdrukker <<Interface>>

  Schuifdeur --|> Deur
  Draaideur --|> Deur
  Schuifdeur o-- Sensor
  SleutelSlot ..|> Slot
  CodeSlot ..|> Slot
  HerkenningsSlot ..|> Slot
  KaartSlot ..|> Slot
  Drukbox ..|> Afdrukker
  Deur o-- Slot
  HerkenningsSlot o-- Afdrukker
  IdKaart "0..*" -- "0..*" KaartSlot
}

'==============================================================================
package "Infrastructure Layer" #Pink {
  interface IGpio <<Facade>> {
    +{abstract} schrijfDigitaal(int, bool) : void
    +{abstract} leesDigitaal(int) : bool
    +{abstract} zetServoHoek(int, int) : void
    +{abstract} configureerInputPullup(int) : void
    +{abstract} configureerOutput(int) : void
  }

  class PigpioGpio {
    -_handle : int
    +PigpioGpio()
    +~PigpioGpio()
    +schrijfDigitaal(int, bool) : void
    +leesDigitaal(int) : bool
    +zetServoHoek(int, int) : void
  }

  class MockGpio {
    -_staat : map<int, bool>
    +schrijfDigitaal(int, bool) : void
    +leesDigitaal(int) : bool
    +zetServoHoek(int, int) : void
    +simuleerKnopdruk(int) : void
  }

  class Servo {
    -_gpio : IGpio&
    -_bcmPin : int
    -_hoekDicht : int
    -_hoekOpen : int
    +Servo(IGpio&, int, int, int)
    +zetOpen() : void
    +zetDicht() : void
  }

  class HallSensor {
    -_geactiveerd : bool
    +activeer() : void
    +deactiveer() : void
    +isGeactiveerd() : bool
  }

  PigpioGpio ..|> IGpio
  MockGpio ..|> IGpio
  HallSensor ..|> Sensor
  Servo --> IGpio
}

'==============================================================================
' Laag-overschrijdende relaties
MainWindow --> Deur
MainWindow --> Servo
MainWindow --> Drukbox
MainWindow --> IdKaart

'==============================================================================
' Onderbouwing
legend bottom left
    **Architectuurkeuzes — onderbouwing**

    | Pattern / Principe | Waar | Waarom |
    | **Strategy** | Slot + 4 impl. | Nieuw slottype zonder Deur te wijzigen (OCP) |
    | **Facade** | IGpio | 5 methodes i.p.v. 30+ pigpio-functies |
    | **Observer** | Qt signals/slots | Losse koppeling knoppen ↔ handlers |
    | **DIP** | Servo→IGpio&, HerkSlot→Afdrukker* | Abstracties i.p.v. concrete klassen |
    | **SRP** | Deur / Servo / MainWindow | Elke klasse één verantwoordelijkheid |
    | **DIP** | Sensor interface in domein | HallSensor in infra; domein 100% Qt-vrij |
    | **LSP** | vector<shared_ptr<Slot>> | Elk slottype inwisselbaar |
    | **ISP** | Afdrukker: 2 methodes | Minimale interface |

    //Head First SA H6 · refactoring.guru · R.C. Martin (SOLID)//
end legend

@enduml
